--- a/package.json
+++ b/package.json
@@ -12,12 +12,13 @@
   "license": "ISC",
   "devDependencies": {
     "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.22.1",
-    "webpack": "^3.3.0",
+    "webpack": "^3.12.0",
     "webpack-cli": "^3.1.0"
   },
   "dependencies": {}
